--- a/pages/my-catagory/my-catagory.wxml
+++ b/pages/my-catagory/my-catagory.wxml
@@ -1,5 +1,5 @@
 <!--pages/my-catagory/my-catagory.wxml-->
-<view class='function-bar'>
+<view class='function-bar' bindtap='createCatagory'>
   <text class='plus-icon'>+</text>
   <text class='plus-text'>新建分类</text>
 </view>
