Added official-accound-detail page.

--- a/pages/my-catagory/my-catagory.wxml
+++ b/pages/my-catagory/my-catagory.wxml
@@ -4,6 +4,6 @@
   <text class='plus-text'>新建分类</text>
 </view>
 <view class='catagory-list'>
-  <text bindlongtap='deleteCatagory'>未分类</text>
+  <text bindtap='goToEditCatagory' bindlongtap='deleteCatagory'>未分类</text>
   <text>我的分类</text>
 </view>
