--- a/pages/subscribe/subscribe.wxml
+++ b/pages/subscribe/subscribe.wxml
@@ -1,7 +1,7 @@
 <!--pages/subscribe/subscribe.wxml-->
 <input class='top-search' placeholder="搜索你喜欢的公众号吧~" maxlength="20" bindconfirm="goToSearch"></input>
 <view class='subscribe-list'>
-  <view wx:for="{{[1,2,3]}}" class='subscribe-item'>
+  <view wx:for="{{[1,2,3]}}" bindtap='goToOfficialAccountDetail' class='subscribe-item'>
     <image class='official-face' src='/static/face.jpg' mode='aspectFill'></image>
     <view class='info-container'>
       <text class='official-name'>delbertbeta</text>
