--- a/pages/timeline/timeline.wxss
+++ b/pages/timeline/timeline.wxss
@@ -31,6 +31,10 @@ text.selected {
   color: black;
 }
 
+.card-view-scroller {
+  height: calc(100vh - 108rpx);
+}
+
 .card {
   margin: 32rpx 0;
   box-shadow: 0 8rpx 12rpx rgba(0, 0, 0, 0.1);
