--- a/pages/subscribe/subscribe.wxml
+++ b/pages/subscribe/subscribe.wxml
@@ -7,6 +7,6 @@
       <text class='official-name'>delbertbeta</text>
       <text class='official-recent-title'>震惊！华工创造301火热开场！</text>
     </view>
-    <text class='post-time'>一分钟前</text>
+    <!-- <text class='post-time'>一分钟前</text> -->
   </view>
 </view>
