--- a/pages/subscribe/subscribe.wxml
+++ b/pages/subscribe/subscribe.wxml
@@ -1,12 +1,12 @@
 <!--pages/subscribe/subscribe.wxml-->
 <input class='top-search' placeholder="搜索你喜欢的公众号吧~" maxlength="20" bindconfirm="goToSearch"></input>
-<view class='subscribe-list'>
-  <view wx:for="{{[1,2,3]}}" bindtap='goToOfficialAccountDetail' class='subscribe-item'>
-    <image class='official-face' src='/static/face.jpg' mode='aspectFill'></image>
+<scroll-view scroll-y class='subscribe-list' bindscrolltolower='nextPage'>
+  <view data-account='{{item.id}}' wx:for="{{accounts}}" wx:key='{{index}}' bindtap='goToOfficialAccountDetail' class='subscribe-item'>
+    <image class='official-face' src='{{item.face}}' mode='aspectFill'></image>
     <view class='info-container'>
-      <text class='official-name'>delbertbeta</text>
-      <text class='official-recent-title'>震惊！华工创造301火热开场！</text>
+      <text class='official-name'>{{item.name}}</text>
+      <text class='official-recent-title'>{{item.message.title}}</text>
     </view>
     <!-- <text class='post-time'>一分钟前</text> -->
   </view>
-</view>
+</scroll-view>
