--- a/pages/subscribe/subscribe.wxss
+++ b/pages/subscribe/subscribe.wxss
@@ -7,6 +7,10 @@
   background-color: #eeeeee;
 }
 
+.subscribe-list {
+  height: calc(100vh - 106rpx);
+}
+
 .subscribe-item {
   display: flex;
   justify-content: flex-start;
