Make the my-subscribe page work well.

--- a/pages/my-subscribe/my-subscribe.wxml
+++ b/pages/my-subscribe/my-subscribe.wxml
@@ -1,11 +1,11 @@
 <!--pages/my-subscribe/my-subscribe.wxml-->
 <view>
-  <view wx:for="{{[1,2,3]}}" class='subscribe-item'>
-    <image class='official-face' src='/static/face.jpg' mode='aspectFill'></image>
+  <view wx:for="{{accounts}}" class='subscribe-item' wx:key='{{item.id}}'>
+    <image class='official-face' src='{{item.face}}' mode='aspectFill'></image>
     <view class='info-container'>
-      <text class='official-name'>delbertbeta</text>
-      <text class='official-desc'>震惊！华工创造301火热开场！</text>
+      <text class='official-name'>{{item.name}}</text>
+      <text class='official-desc'>{{item.description}}</text>
     </view>
-    <text class='subscribe-status'>-</text>
+    <text class='subscribe-status' data-index="{{index}}" bindtap='makeOrCancel'>{{item.subscribed ? '-' : '+'}}</text>
   </view>
 </view>
