--- a/pages/edit-catagory/edit-catagory.wxml
+++ b/pages/edit-catagory/edit-catagory.wxml
@@ -1,13 +1,16 @@
 <!--pages/edit-catagory/edit-catagory.wxml-->
 
 <view>
-  <text class='edit-catagory-title'>新闻</text>
+  <text class='edit-catagory-title'>{{catagoryName}}</text>
 </view>
 <view wx:if="{{editing}}">
   <input class='catagoryName' bindconfirm="inputName" placeholder='分类名'></input>
 </view>
-<item-select-list>
+
+<scroll-view class='scroll-view' scroll-y>
+<item-select-list accounts="{{catagories}}" bind:checkboxChange="checkboxChange">
 </item-select-list>
+</scroll-view>
 
 <view class='function-list'>
   <button bindtap='goToAddToCatagory' class='button' hover-class='button-hover'>添加</button>
