--- a/pages/subscribe/subscribe.wxml
+++ b/pages/subscribe/subscribe.wxml
@@ -2,7 +2,7 @@
 <input class='top-search' placeholder="搜索你喜欢的公众号吧~" maxlength="20" bindconfirm="goToSearch"></input>
 <scroll-view scroll-y class='subscribe-list' bindscrolltolower='nextPage'>
   <view data-account='{{item.id}}' wx:for="{{accounts}}" wx:key='{{index}}' bindtap='goToOfficialAccountDetail' class='subscribe-item'>
-    <image class='official-face' src='{{item.face}}' mode='aspectFill'></image>
+    <image class='official-face' src='{{item.face}}' mode='aspectFit'></image>
     <view class='info-container'>
       <text class='official-name'>{{item.name}}</text>
       <text class='official-recent-title'>{{item.message.title}}</text>
